fix overflow x and polish transition

--- a/assets/scss/components/bigSlider.scss
+++ b/assets/scss/components/bigSlider.scss
@@ -31,6 +31,10 @@
       height: 100%;
       width: 100%;
 
+      a {
+        position: relative;
+      }
+
       &::before {
         content: '';
         z-index: -1;
