--- a/assets/scss/components/nav.scss
+++ b/assets/scss/components/nav.scss
@@ -5,7 +5,7 @@
 
 .nav {
   padding: 5vh 8vw 0;
-  position: fixed;
+  position: absolute;
   top: 0;
   margin: auto;
   width: 100%;
